Fix font sizes on mobile (#9)

--- a/frontend-org/app/src/pages/home/styles.module.css
+++ b/frontend-org/app/src/pages/home/styles.module.css
@@ -67,6 +67,7 @@
 .heroSubtitle {
   color: var(--mui-palette-text-primary);
   text-wrap: balance;
+  line-height: 1.3 !important;
 }
 
 .heroButton {
@@ -97,7 +98,6 @@
   display: flex;
   flex-basis: 0;
   align-items: center;
-  padding: 32px 0;
 }
 
 .postsInnerGrid {
